tests/specs/ecosystem/daggerverse/scorecard/0_1_1.test
daggerverse/scorecard/0.1.1
===

== FAST CHECK EMIT FAILED ==
error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /sdk/client.gen.ts:45:7
   | 
45 |   get queryTree() {
   |       ^^^^^^^^^ this function is missing an explicit return type
   = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


